--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,54 @@
   box-sizing: border-box;
 }
 
+.show{
+  opacity: 1;
+  transition: .2s;
+}
+
+.hidden{
+  opacity: 0;
+  transition: .2s;
+}
+
+
+h2{
+  color:#333;
+  padding-bottom: 20px;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
+h3{
+  color:#333;
+  padding-bottom: 20px;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
+h3#ticketRate, h3#ticketBill{
+  color: rgb(147, 5, 5);
+  padding-bottom: 20px;
+  font-size: 2em;
+  font-weight: 700;
+}
+
 body{
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
   width:100%;
   height:100vh;
-  color:white;
+  color:#333;
 }
 
-/* - PADDING GENERALI */
+/* - Header */
 .header{
-  position: relative;
+  position: fixed;
   display: flex;
+  top:0;
+  left:0;
   width:100%;
-  height:140px;
+  height:120px;
   padding: 0 20px;
   align-items: center;
   justify-content:space-between;
@@ -32,83 +66,63 @@ body{
   filter: invert(1);
 }
 
+/* - Main */
+
 .main-container{
   display: flex;
+  flex-direction: column;
   width:100%;
-  height:100vh;
+  height:calc(100vh + 120px);
   align-items: center;
-  justify-content:space-around;
-}
-
-.main-container::after{
-  content: "";
-  background-image: url("../img/map.png");
-  position:absolute;
-  z-index: -1;
-  width:100%;
-  height:100%;
-  opacity:.5;
-  filter: blur(5px);
-}
-
-.train-container{
-  display: flex;
   justify-content:center;
-  align-items: center;
+}
+
+.train-section{
+  display: flex;
+  justify-content:space-between;
+  align-items: flex-start;
   width:80%;
-  padding:40px;
+  line-height: 24px;
+  background-color: rgba(236,236,236,.9);
   border: 1px solid rgb(169, 175, 189);
   box-shadow: #333 1px 1px 12px;
   border-radius: 3px;
   text-align: center;
-  background-color: rgba(236,236,236,.9);
-}
-
-
-.train-card{
-  float: left;
   padding:40px;
+  margin:30px 0;
 }
 
-.train-card::after{
-  content:"";
-  clear: both;
-  display: table;
+ /* SEZIONE FORM */
+.train-section .form{
+  text-align: left;
 }
 
-.location-card{
+.train-section .form input{
+  width:100%;
+}
+
+/* SEZIONE TABLE */
+.train-section .table{
+  text-align: center;
+  font-size: 1.4em;
+}
+
+th , td{
+  padding: 0 10px 20px 10px;
+}
+
+/* SEZIONE RESUME */
+.train-section .resume{
   float: left;
-  background-image: url("https://www.spagna.info/wp-content/uploads/sites/39/madrid.jpg");
-  background-size: cover;
-  background-position: bottom;
-  width:40%;
-  min-height:300px;
+  text-align: left;
+    line-height: 40px;
+
 }
 
-h2{
-  color:#333;
-  padding: 30px 0;
-  font-size: 1.8em;
-  font-weight: 700;
-}
 
-h3{
-  color:#333;
-  padding: 30px 0;
-  font-size: 1.7em;
-  font-weight: 700;
-}
 
-h3#ticketRate{
-  color: rgb(147, 5, 5);
-  padding: 30px 0;
-  font-size: 2em;
-  font-weight: 700;
-}
-
-h3#ticketCost{
-  color: rgb(147, 5, 5);
-  padding: 30px 0;
-  font-size: 3em;
-  font-weight: 700;
+.countdown-card{
+  text-align: center;
+  background-color: yellow;
+  border:1px solid black;
 }
