--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h3{
 }
 
 h3#ticketRate, h3#ticketBill{
-  color: rgb(147, 5, 5);
+  color:  #CE4760;
   padding-bottom: 20px;
   font-size: 2em;
   font-weight: 700;
@@ -57,7 +57,7 @@ body{
   align-items: center;
   justify-content:space-between;
   color:white;
-  background-color: rgb(147, 5, 5);
+  background-color:  #CE4760;
 }
 
 .header > img {
@@ -65,6 +65,27 @@ body{
   height:auto;
   filter: invert(1);
 }
+
+.header .link{
+  width:30%;
+  font-size: 1.5em;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  list-style-type: none;
+}
+
+.header .link a{
+  padding:10px 20px;
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  color:white;
+  border-right: 2px solid white;
+  border-radius: 2px;
+}
+
+
 
 /* - Main */
 
@@ -77,12 +98,16 @@ body{
   justify-content:center;
 }
 
+.main-container>div>h2:first-of-type{
+  font-size: 2.4em;
+  color:   #D24B64;
+}
+
 .train-section{
   display: flex;
   justify-content:space-between;
   align-items: flex-start;
   width:80%;
-  line-height: 24px;
   background-color: rgba(236,236,236,.9);
   border: 1px solid rgb(169, 175, 189);
   box-shadow: #333 1px 1px 12px;
@@ -97,17 +122,48 @@ body{
   text-align: left;
 }
 
+.train-section .form > div{
+  padding-bottom: 20px;
+}
+
 .train-section .form input{
   width:100%;
+  padding: 5px 0;
+  border-left:0;
+  border-right: 0;
+  border-top: 0;
+  border-bottom: 2px solid   #D24B64;
 }
+
+
+.form label{
+  color: #D24B64;
+}
+
+.form button:first-of-type{
+  color:white;
+  padding:10px;
+  border-radius: 4px;
+  background-color: #D24B64;
+}
+.form button:last-of-type{
+  color:white;
+  padding:10px;
+  border-radius: 4px;
+  background-color: #D24B64;
+}
+
+
 
 /* SEZIONE TABLE */
 .train-section .table{
+  background-color: white;
+  height:100%;
   text-align: center;
   font-size: 1.4em;
 }
 
-th , td{
+.table th , .table td{
   padding: 0 10px 20px 10px;
 }
 
@@ -115,14 +171,13 @@ th , td{
 .train-section .resume{
   float: left;
   text-align: left;
-    line-height: 40px;
-
 }
 
-
-
 .countdown-card{
+  color: white;
+  padding:40px;
   text-align: center;
-  background-color: yellow;
-  border:1px solid black;
+  background-color:  #CE4760;
+  box-shadow: #333 1px 1px 12px;
+  border-radius: 3px;
 }
