--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+
+body{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  width:100%;
+  height:100vh;
+  color:#333;
+}
+
 .show{
   opacity: 1;
   transition: .2s;
@@ -19,31 +28,24 @@
 h2{
   color:#333;
   padding-bottom: 20px;
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-weight: 700;
 }
 
 h3{
   color:#333;
   padding-bottom: 20px;
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 700;
 }
 
 h3#ticketRate, h3#ticketBill{
   color:  #CE4760;
   padding-bottom: 20px;
-  font-size: 2em;
+  font-size: 1.88em;
   font-weight: 700;
 }
 
-body{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 12px;
-  width:100%;
-  height:100vh;
-  color:#333;
-}
 
 /* - Header */
 .header{
@@ -67,8 +69,7 @@ body{
 }
 
 .header .link{
-  width:30%;
-  font-size: 1.5em;
+  font-size: 1.3em;
   display: flex;
   justify-content:center;
   align-items: center;
@@ -92,8 +93,9 @@ body{
 .main-container{
   display: flex;
   flex-direction: column;
+  margin-top:140px;
   width:100%;
-  height:calc(100vh + 120px);
+  height:100vh;
   align-items: center;
   justify-content:center;
 }
@@ -107,18 +109,24 @@ body{
   display: flex;
   justify-content:space-between;
   align-items: flex-start;
-  width:80%;
-  background-color: rgba(236,236,236,.9);
+  width:90%;
+  /* background-color: rgba(236,236,236,.9);
   border: 1px solid rgb(169, 175, 189);
   box-shadow: #333 1px 1px 12px;
-  border-radius: 3px;
+  border-radius: 3px; */
   text-align: center;
-  padding:40px;
-  margin:30px 0;
+  padding:20px;
+  margin:20px 0;
 }
 
  /* SEZIONE FORM */
 .train-section .form{
+  width:21%;
+  background-color: rgba(236,236,236,.9);
+  border: 1px solid rgb(169, 175, 189);
+  box-shadow: #333 1px 1px 12px;
+  border-radius: 3px;
+  padding:20px;
   text-align: left;
 }
 
@@ -126,7 +134,7 @@ body{
   padding-bottom: 20px;
 }
 
-.train-section .form input{
+.train-section .form input, .train-section .form select{
   width:100%;
   padding: 5px 0;
   border-left:0;
@@ -135,32 +143,47 @@ body{
   border-bottom: 2px solid   #D24B64;
 }
 
-
-.form label{
+.train-section .form label{
   color: #D24B64;
 }
 
-.form button:first-of-type{
+.train-section .form .btnContainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.train-section .form button:first-of-type{
   color:white;
-  padding:10px;
+  padding:8px;
   border-radius: 4px;
   background-color: #D24B64;
 }
-.form button:last-of-type{
-  color:white;
-  padding:10px;
+.train-section .form button:last-of-type{
+  color:#D24B64;
+  padding:8px;
   border-radius: 4px;
-  background-color: #D24B64;
+  background-color: #F7DEE3;
 }
 
 
 
 /* SEZIONE TABLE */
 .train-section .table{
-  background-color: white;
   height:100%;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.2em;
+}
+
+.bgWhite{
+  background-color: white;
+  transition:0.2s;
+  border-radius: 4px;
+}
+
+.bgColor{
+  background-color: #F7DEE3;
+  transition:0.2s;
+  border-radius: 4px;
 }
 
 .table th , .table td{
@@ -169,7 +192,13 @@ body{
 
 /* SEZIONE RESUME */
 .train-section .resume{
-  float: left;
+  align-self: stretch;
+  width:25%;
+  background-color: rgba(236,236,236,.9);
+  border: 1px solid rgb(169, 175, 189);
+  box-shadow: #333 1px 1px 12px;
+  border-radius: 3px;
+  padding:20px;
   text-align: left;
 }
 
